# aviutl2-cli

./: .gitignore  Cargo.toml  README.md  mise.toml  package.json  pnpm-lock.yaml  tspconfig.yaml
.github/workflows/: publish.yml
schema/: aviutl2.config.schema.json
src/: catalog_schema.rs  cli.rs  config.rs  main.rs  schema.json  schema.rs  util.rs
src/commands/: catalog.rs  develop.rs  init.rs  mod.rs  prepare.rs  preview.rs  release.rs  schema.rs
tests/: e2e.rs  prepare.rs
typespec/: main.tsp  modifySchema.ts  package.json  tspconfig.yaml
typespec/temporary/: aviutl2.config.schema.json
