[package]
name = "aviutl2-cli"
version = "0.0.0"
edition = "2024"

[[bin]]
name = "au2"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.56", features = ["derive"] }
env_logger = "0.11.8"
fs-err = "3.2.2"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11"
ureq = "3.1.4"
walkdir = "2.5.0"
zip = "7.2.0"
